--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar-inverse{
+    background-color: #3f51b5 !important;
+    border-color: #3f51b5 !important;
+}
+
